@@ -1,5 +1,6 @@
 1.21.0 /
 [Alexandr Topilski]
+- New settings strategy
 
 1.20.4 / October 22, 2018
 [Alexandr Topilski]
